--- a/P5_Neighborhood_Map_Project-master/index.html
+++ b/P5_Neighborhood_Map_Project-master/index.html
@@ -1,40 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <title>Lake County Ohio Neighborhood Map</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="css/style.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" type="text/css" href="jvmobilemenu/jv-jquery-mobile-menu.css">
-</head>
-
-
-<body>
-
-
-<div class="mobile-nav">
-      <div id="places" class="places">
-      <ul data-bind="foreach: searchPlaces">
-        <li data-bind="text: $data.placename, click: $parent.setCurrentPlace, css: { selected: $data.selected() > 0 }"></li>
-      </ul>
-      <ul>
+  <head>
+      <meta charset="utf-8">
+      <title>Lake County Ohio Neighborhood Map</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+      <link rel="stylesheet" href="jvmobilemenu/jv-jquery-mobile-menu.css">
+      <link href="css/style.css" rel="stylesheet" media="screen">
+  </head>
+  <body>
+    <div class="mobile-nav">
+        <div id="places" class="places">
+        <ul data-bind="foreach: searchPlaces">
+          <li data-bind="text: $data.placename, click: $parent.setCurrentPlace, css: { selected: $data.selected() > 0 }"></li>
+        </ul>
         <form action="#">
-          <input class="search" placeholder="search" type="search" name="search" data-bind="value: searchBox, valueUpdate: 'keyup'" autocomplete="off">
+            <input class="search" placeholder="search" type="search" name="search" data-bind="value: searchBox, valueUpdate: 'keyup'" autocomplete="off">
         </form>
-      </ul>
+      </div>
     </div>
-  </div>
-
-
-  <div id="map-canvas" class="map-canvas"></div>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
-  <script src="./js/libs/infobubble.js"></script>
-  <script src="./js/app.js"></script>
-  <script src="./js/libs/jquery.collapsible.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-  <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
-  <script src="js/script-left.js"></script>
-</body>
+    <div id="map-canvas" class="map-canvas"></div>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=places"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
+    <script src="./js/libs/infobubble.js"></script>
+    <script src="./js/app.js"></script>
+    <script src="./js/libs/jquery.collapsible.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="jvmobilemenu/jv-jquery-mobile-menu-min.js"></script>
+    <script src="js/script-left.js"></script>
+  </body>
 </html>
